# HomeWork

./: .gitignore  README.md
big_integer/: big_integer.cpp
big_integer_optimization/: CMakeLists.txt  my_vector_uint32.cpp
bind/: CMakeLists.txt  easy_bind.h  main.cpp
cpp_course/: .gitignore
cpp_course/assembler/: mul.asm
cpp_course/big_integer/: .gitignore
cpp_course/big_integer_optimization/: .gitignore  my_vector_uint32.h
cpp_course/bind/: clear.sh  draft.cpp  easy_bind.h  integer_sequence.h  sorokin_easy_bind.cpp
cpp_course/list_debug/: list_debug.h  main.cpp
cpp_course/lru_cache/: CMakeLists.txt  main.cpp
cpp_course/persistent_set/: .gitignore  CMakeLists.txt  main.cpp  perset_testing.cpp  persistent_set.h
cpp_course/testing/: CMakeLists.txt  clear.sh  override_with_classes.cpp  pack_in_template_function.cpp  public_to_private.cpp  specialization_and_overload_func.cpp  strange_default_param.cpp  strange_overload.cpp  test_funcptr.cpp  test_ptr.cpp
cpp_one_course/assembler/: add  add.asm  hello.asm  mul.asm  sub.asm
cpp_one_course/big_integer/: CMakeLists.txt  Source.cpp  big_integer.cpp  big_integer.h  big_integer2.0.cpp
cpp_one_course/big_integer_optimization/: CMakeLists.txt  big_integer.cpp  big_integer.h  my_vector_uint32.h
cpp_one_course/deq/: CMakeLists.txt  deq.h  main.cpp  readme.txt
cpp_one_course/huffman/: CMakeLists.txt  decoder.cpp  encoder.cpp  frequency_detector.cpp  huffman_lib.h  main.cpp
cpp_one_course/list/: list.h
cpp_one_course/list_debug/: list_debug.h  main.cpp  (+1 more)
huffman/: encoder.cpp
list_debug/: CMakeLists.txt  list_debug  list_debug.h  list_debug_v1.h  list_debug_v2.h
lru_cache/: .gitignore  lru_cache.h
persistent_set/: CMakeLists.txt  README.md  old_persistent_set.h
testing/: array_is_type.cpp  head.h  marge_namespace_of_classes.cpp  pure_virtual.cpp  test_array.cpp  test_lr_value.cpp  typedef_example.cpp  virtual_inheritance_myth.cpp
(+14 files in other folders)
